--- a/examples/individual-repo-workflows/debug-tag-creation.yml
+++ b/examples/individual-repo-workflows/debug-tag-creation.yml
@@ -19,6 +19,11 @@ on:
         required: false
         default: true
         type: boolean
+      cleanup_old_artifacts:
+        description: "Clean up old test artifacts before running new tests"
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   debug-tag-creation:
@@ -30,6 +35,7 @@ jobs:
       test_tag_name: ${{ inputs.test_tag_name }}
       target_commit: ${{ inputs.target_commit }}
       cleanup_tag: ${{ inputs.cleanup_tag }}
+      cleanup_old_artifacts: ${{ inputs.cleanup_old_artifacts }}
     secrets:
       # REQUIRED: GitHub App and GPG credentials for your organization
       CLDMV_BOT_APP_ID: ${{ secrets.CLDMV_BOT_APP_ID }}
@@ -56,21 +62,22 @@ jobs:
 #    - Does the GitHub API work when git commands fail?
 #    - Are there authentication differences between methods?
 #
-# 4. **GPG signature verification**
-#    - Are your tags properly signed and verified?
+# 4. **GPG signature verification (separated by method)**
+#    - API GPG: Are GitHub App API-created tags properly signed?
+#    - Git GPG: Are locally-created tags properly signed and pushed?
 #    - Do different creation methods affect signature verification?
 #
 # Expected Results Matrix:
-# ┌─────────────────────────────────────────────────────────────────────────────┐
-# │ Scenario                  │ Token  │ App Perms │ YAML Perms │ Git │ API │ GPG │
-# ├─────────────────────────────────────────────────────────────────────────────┤
-# │ App + No App + No YAML    │ App    │ ❌        │ ❌         │ ❌  │ ✅  │ ✅  │
-# │ App + App Perms + No YAML │ App    │ ✅        │ ❌         │ ❌  │ ✅  │ ✅  │
-# │ App + No App + YAML Perms │ App    │ ❌        │ ✅         │ ❌  │ ✅  │ ✅  │
-# │ App + App Perms + YAML    │ App    │ ✅        │ ✅         │ ❌  │ ✅  │ ✅  │
-# │ GitHub + No YAML          │ GitHub │ N/A       │ ❌         │ ✅  │ ✅  │ ✅  │
-# │ GitHub + YAML Perms       │ GitHub │ N/A       │ ✅         │ ✅  │ ✅  │ ✅  │
-# └─────────────────────────────────────────────────────────────────────────────┘
+# ┌──────────────────────────────────────────────────────────────────────────────────────┐
+# │ Scenario                  │ Token  │ App Perms │ YAML Perms │ Git │ API │ API GPG │ Git GPG │
+# ├──────────────────────────────────────────────────────────────────────────────────────┤
+# │ App + No App + No YAML    │ App    │ ❌        │ ❌         │ ✅  │ ✅  │ ❌      │ ✅      │
+# │ App + App Perms + No YAML │ App    │ ✅        │ ❌         │ ✅  │ ✅  │ ❌      │ ✅      │
+# │ App + No App + YAML Perms │ App    │ ❌        │ ✅         │ ✅  │ ✅  │ ❌      │ ✅      │
+# │ App + App Perms + YAML    │ App    │ ✅        │ ✅         │ ✅  │ ✅  │ ❌      │ ✅      │
+# │ GitHub + No YAML          │ GitHub │ N/A       │ ❌         │ ✅  │ ✅  │ ❌      │ ❌      │
+# │ GitHub + YAML Perms       │ GitHub │ N/A       │ ✅         │ ✅  │ ✅  │ ❌      │ ❌      │
+# └──────────────────────────────────────────────────────────────────────────────────────┘
 #
 # If you see App Token git commands failing consistently while API succeeds,
 # this indicates a GitHub platform bug with App token permissions for
